# VideoCleaner

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: pages.yml  release-installers.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  styles.css
electron/: main.cjs
scripts/: assert-platform.mjs  build-python-server.mjs  generate-native-icons.py  prepare-native-assets.mjs
server/: desktop_server.py  desktop_server.spec  pyproject.toml  setup.py
server/app/: ai_cleanup.py  main.py  processor.py  schemas.py  store.py
server/tests/: test_ai_cleanup.py  test_processor.py
site/: index.html  styles.css
